--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khidki | Artist Portfolio</title>
-    <link rel="icon" href="dp_final.jpeg" type="image/png">
+    <link rel="icon" href="sjdp.jpeg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -237,8 +237,8 @@
             animation: glowPulse 1.5s ease-in-out infinite;
         }
         @keyframes glowPulse {
-            0%, 100% { box-shadow: 0 0 8px 3px rgba(255, 248, 127, 0.6), 0 0 16px 6px rgba(255, 230, 100, 0.4), 0 0 24px 10px rgba(255, 220, 80, 0.2); }
-            50% { box-shadow: 0 0 12px 5px rgba(255, 255, 180, 0.8), 0 0 24px 10px rgba(255, 248, 127, 0.5), 0 0 36px 16px rgba(255, 230, 100, 0.3); }
+            0%, 100% { box-shadow: 0 0 40px 15px rgba(255, 248, 127, 0.6), 0 0 16px 6px rgba(255, 230, 100, 0.4), 0 0 24px 10px rgba(255, 220, 80, 0.2); }
+            50% { box-shadow: 0 0 60px 25px rgba(255, 255, 180, 0.8), 0 0 24px 10px rgba(255, 248, 127, 0.5), 0 0 36px 16px rgba(255, 230, 100, 0.3); }
         }
         .firefly-cursor.hovering .firefly-abdomen {
             box-shadow: 0 0 15px 6px rgba(255, 255, 180, 0.9), 0 0 30px 12px rgba(255, 248, 127, 0.6), 0 0 45px 20px rgba(255, 230, 100, 0.4);
@@ -925,7 +925,7 @@
 
     <!-- Parallax Background Image -->
     <div class="parallax-bg">
-        <img src="fdbg.jpg" alt="" id="parallaxImg">
+        <img src="scenery.jpg" alt="" id="parallaxImg">
     </div>
 
     <!-- Video Background (above parallax, below all content) -->
@@ -973,8 +973,8 @@
     <div class="firefly-trail" id="trail4"></div>
     <div class="firefly-trail" id="trail5"></div>
 
-    <!-- Spotlight Darkness Overlay -->
-    <div class="spotlight-overlay" id="spotlightOverlay"></div>
+    <!-- Spotlight Darkness Overlay
+    <div class="spotlight-overlay" id="spotlightOverlay"></div> -->
 
     <!-- Navigation -->
     <nav class="nav" id="nav">
@@ -991,8 +991,10 @@
     <section id="hero" class="parallax-section">
         <div class="hero-content">
             <h1>Khidki</h1>
-            <p class="subtitle">— A Window to Art —</p>
-            <p>Where imagination meets canvas. Explore a collection of paintings, illustrations, and visual stories that capture emotions, dreams, and the beauty of life.</p>
+            <p class="subtitle">— A Window Within —</p>
+            <p>A collection of feelings disguised as landscapes, windows, and moments that refuse to be ordinary.
+                Certainly a proof that emotions can, in fact, be framed and hung on a wall
+            </p>
         </div>
         <div class="scroll-indicator" id="scrollIndicator">
             <div class="arrow">
@@ -1008,7 +1010,8 @@
         <div class="section-content">
             <div class="section-header">
                 <h2>Artworks</h2>
-                <p>Original paintings, sketches, and mixed media pieces across various styles and themes.</p>
+                <p>Different moods. Different mediums.
+                    The same quiet intention, to turn feelings into something you can see.</p>
             </div>
             <div class="artworks-grid">
                 <div class="artwork-card">
@@ -1041,13 +1044,16 @@
         <div class="section-content">
             <div class="artist-content">
                 <div class="artist-image">
-                    <img src="dp_final.jpeg" alt="The Artist">
+                    <img src="sjdp.jpeg" alt="The Artist">
                 </div>
                 <div class="artist-info">
                     <h3>The Artist</h3>
-                    <p class="tagline">Painting emotions, one canvas at a time</p>
-                    <p>I'm a visual artist drawn to the intersection of emotion and color. Through my work, I explore the landscapes of human experience—joy, solitude, wonder, and everything in between.</p>
-                    <p>Each piece is a window (khidki) into a world that exists somewhere between reality and imagination. The name "Khidki" reflects my belief that art opens windows to new perspectives.</p>
+                    <p class="tagline">Hi, I’m Saudamini</p>
+                    <p>I’m a visual artist, trained architect, professional overthinker, and lifelong observer of small, emotional details.
+                        I make paintings that sit somewhere between memory and imagination. The kind that doesn't shout, but quietly stays with you. My work is influenced by spaces, silence, human connection, and the invisible stories we carry but rarely say out loud.</p>
+                    <p><b>Khidki</b> (which means window) is how I see art:
+                        A gentle opening between inner worlds and outer spaces.</p>
+                    <p>Sometimes I paint landscapes. My Art for slow moments, thoughtful spaces, and hearts that feel a little too much. Sometimes I paint feelings disguised as rooms, hills, windows, or people standing still at just the wrong/right moment. Artist by stubborn choice and Making quiet art for loud hearts, . Powered almost entirely by chai.                        </p>
                     <div class="skills-list">
                         <span class="skill-tag">🎨 Oil Painting</span>
                         <span class="skill-tag">💧 Watercolor</span>
