--- a/portfolio_mobile.html
+++ b/portfolio_mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khidki | Artist Portfolio</title>
-    <link rel="icon" href="dp_final.jpeg" type="image/png">
+    <link rel="icon" href="sjdp.jpeg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -219,7 +219,7 @@
     <section class="hero">
         <h1>Khidki</h1>
         <p class="section-subtitle">Since 2026</p>
-        <p>A window to art. Exploring emotions through color and canvas.</p>
+        <p>A window within. Exploring emotions through color and canvas.</p>
     </section>
 
     <section id="artworks">
@@ -253,7 +253,7 @@
 
     <section id="artist">
         <h2>The Artist</h2>
-        <img src="dp_final.jpeg" alt="Artist" class="artist-img">
+        <img src="sjdp.jpeg" alt="Artist" class="artist-img">
         <div class="artist-bio">
             <p>I'm a visual artist drawn to the intersection of emotion and color. "Khidki" reflects my belief that art opens windows to new perspectives.</p>
         </div>
