--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Artist | Khidki</title>
-    <link rel="icon" href="dp_final.jpeg" type="image/png">
+    <link rel="icon" href="sjdp.jpeg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -407,7 +407,7 @@
 
     <main class="container">
         <header class="about-header">
-            <img src="dp_final.jpeg" alt="Artist" class="profile-image">
+            <img src="sjdp.jpeg" alt="Artist" class="profile-image">
             <div class="intro">
                 <h1>The Artist</h1>
                 <p class="tagline">Painting emotions, one canvas at a time.</p>
