--- a/painting.html
+++ b/painting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painting | Khidki</title>
-    <link rel="icon" href="dp_final.jpeg" type="image/png">
+    <link rel="icon" href="sjdp.jpeg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
