--- a/gallery.html
+++ b/gallery.html
@@ -342,67 +342,7 @@
 
         <div class="gallery-grid">
             <a href="painting.html?id=1" class="gallery-item">
-                <img src="1.jpg" alt="Spectrum of Silence">
-                <div class="gallery-overlay">
-                    <h3>Spectrum of Silence</h3>
-                    <p class="medium">Oil on Canvas</p>
-                    <span class="view-btn">
-                        View Details
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                            <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                    </span>
-                </div>
-            </a>
-
-            <a href="painting.html?id=2" class="gallery-item">
-                <img src="4.jpg" alt="Twilight Mountains">
-                <div class="gallery-overlay">
-                    <h3>Twilight Mountains</h3>
-                    <p class="medium">Oil on Canvas</p>
-                    <span class="view-btn">
-                        View Details
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                            <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                    </span>
-                </div>
-            </a>
-
-            <a href="painting.html?id=3" class="gallery-item">
-                <img src="8.jpg" alt="Kaarigari">
-                <div class="gallery-overlay">
-                    <h3>Kaarigari</h3>
-                    <p class="medium">Watercolor on Paper</p>
-                    <span class="view-btn">
-                        View Details
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                            <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                    </span>
-                </div>
-            </a>
-
-            <a href="painting.html?id=4" class="gallery-item">
-                <img src="9.jpg" alt="Mannat">
-                <div class="gallery-overlay">
-                    <h3>Mannat</h3>
-                    <p class="medium">Acrylic on Canvas</p>
-                    <span class="view-btn">
-                        View Details
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                            <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                    </span>
-                </div>
-            </a>
-
-            <a href="painting.html?id=5" class="gallery-item">
-                <img src="11.jpg" alt="Kshitij">
+                <img src="khidki_artifacts/Kshitij 1.png" alt="Kshitij">
                 <div class="gallery-overlay">
                     <h3>Kshitij</h3>
                     <p class="medium">Charcoal & Pastel</p>
@@ -416,11 +356,71 @@
                 </div>
             </a>
 
-            <a href="painting.html?id=6" class="gallery-item">
-                <img src="12.jpg" alt="Parchhai">
+            <a href="painting.html?id=2" class="gallery-item">
+                <img src="khidki_artifacts/Talaash 2.png" alt="Talaash">
                 <div class="gallery-overlay">
-                    <h3>Parchhai</h3>
-                    <p class="medium">Watercolor</p>
+                    <h3>Talaash</h3>
+                    <p class="medium">Mixed Media</p>
+                    <span class="view-btn">
+                        View Details
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                    </span>
+                </div>
+            </a>
+
+            <a href="painting.html?id=3" class="gallery-item">
+                <img src="khidki_artifacts/Ghungroo 3.png" alt="Ghungroo">
+                <div class="gallery-overlay">
+                    <h3>Ghungroo</h3>
+                    <p class="medium">Mixed Media</p>
+                    <span class="view-btn">
+                        View Details
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                    </span>
+                </div>
+            </a>
+
+            <a href="painting.html?id=4" class="gallery-item">
+                <img src="khidki_artifacts/PORTAL 4.png" alt="Portal">
+                <div class="gallery-overlay">
+                    <h3>Portal</h3>
+                    <p class="medium">Mixed Media</p>
+                    <span class="view-btn">
+                        View Details
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                    </span>
+                </div>
+            </a>
+
+            <a href="painting.html?id=5" class="gallery-item">
+                <img src="khidki_artifacts/Kaarigari 5.png" alt="Kaarigari">
+                <div class="gallery-overlay">
+                    <h3>Kaarigari</h3>
+                    <p class="medium">Watercolor on Paper</p>
+                    <span class="view-btn">
+                        View Details
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                    </span>
+                </div>
+            </a>
+
+            <a href="painting.html?id=6" class="gallery-item">
+                <img src="khidki_artifacts/Mannat 6.png" alt="Mannat">
+                <div class="gallery-overlay">
+                    <h3>Mannat</h3>
+                    <p class="medium">Acrylic on Canvas</p>
                     <span class="view-btn">
                         View Details
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -432,10 +432,10 @@
             </a>
 
             <a href="painting.html?id=7" class="gallery-item">
-                <img src="16.jpg" alt="Echoes of Joy">
+                <img src="khidki_artifacts/Parchchai 7.png" alt="Parchchai">
                 <div class="gallery-overlay">
-                    <h3>Echoes of Joy</h3>
-                    <p class="medium">Acrylic</p>
+                    <h3>Parchchai</h3>
+                    <p class="medium">Watercolor</p>
                     <span class="view-btn">
                         View Details
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -447,9 +447,9 @@
             </a>
 
             <a href="painting.html?id=8" class="gallery-item">
-                <img src="28.jpg" alt="Urban Rhythms">
+                <img src="khidki_artifacts/Bachpan 8.png" alt="Bachpan">
                 <div class="gallery-overlay">
-                    <h3>Urban Rhythms</h3>
+                    <h3>Bachpan</h3>
                     <p class="medium">Mixed Media</p>
                     <span class="view-btn">
                         View Details
@@ -462,10 +462,10 @@
             </a>
 
             <a href="painting.html?id=9" class="gallery-item">
-                <img src="52.jpg" alt="Starlit Peaks">
+                <img src="khidki_artifacts/Jharna 9.png" alt="Jharna">
                 <div class="gallery-overlay">
-                    <h3>Starlit Peaks</h3>
-                    <p class="medium">Oil on Canvas</p>
+                    <h3>Jharna</h3>
+                    <p class="medium">Mixed Media</p>
                     <span class="view-btn">
                         View Details
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
