--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <video id="screensaverVideo" loop playsinline>
             <source src="ss_final.mp4" type="video/mp4">
         </video>
-        <div class="screensaver-hint">Move cursor or scroll to continue</div>
     </div>
 
     <!-- Parallax Background Image -->
@@ -89,7 +88,7 @@
     <section id="hero" class="parallax-section">
         <div class="hero-content">
             <h1>Khidki</h1>
-            <p class="subtitle">— A Window Within —</p>
+            <h2 class="subtitle">— A Window Within —</h2>
             <p>A collection of feelings disguised as landscapes, windows, and moments that refuse to be ordinary.
                 Certainly a proof that emotions can, in fact, be framed and hung on a wall
             </p>
@@ -113,21 +112,21 @@
             </div>
             <div class="artworks-grid">
                 <div class="artwork-card">
-                    <img src="11.jpg" alt="Kshitij">
+                    <img src="khidki_artifacts/Kshitij 1.png" alt="Kshitij">
                     <div class="info">
                         <h3>Kshitij</h3>
                         <p class="medium">Acrylic on Canvas, 24×36"</p>
                     </div>
                 </div>
                 <div class="artwork-card">
-                    <img src="12.jpg" alt="Parchhai">
+                    <img src="khidki_artifacts/Talaash 2.png" alt="Parchhai">
                     <div class="info">
                         <h3>Parchhai</h3>
                         <p class="medium">Oil on Canvas, 18×24"</p>
                     </div>
                 </div>
                 <div class="artwork-card">
-                    <img src="8.jpg" alt="Kaarigari">
+                    <img src="khidki_artifacts/Kaarigari 5.png" alt="Kaarigari">
                     <div class="info">
                         <h3>Kaarigari</h3>
                         <p class="medium">Watercolor on Paper, 12×16"</p>
@@ -173,38 +172,66 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="1.jpg" alt="Featured">
+                    <img src="khidki_artifacts/Kshitij%201.png" alt="Kshitij">
                     <div class="overlay">
-                        <h4>Spectrum of Silence</h4>
-                        <span>Featured at Solo Exhibition 2025</span>
+                        <h4>Kshitij</h4>
+                        <span>Artwork 1</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="4.jpg" alt="Landscape">
+                    <img src="khidki_artifacts/Talaash%202.png" alt="Talaash">
                     <div class="overlay">
-                        <h4>Twilight Mountains</h4>
-                        <span>Oil on Canvas</span>
+                        <h4>Talaash</h4>
+                        <span>Artwork 2</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="16.jpg" alt="Abstract">
+                    <img src="khidki_artifacts/Ghungroo%203.png" alt="Ghungroo">
                     <div class="overlay">
-                        <h4>Echoes of Joy</h4>
-                        <span>Acrylic</span>
+                        <h4>Ghungroo</h4>
+                        <span>Artwork 3</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="28.jpg" alt="Color study">
+                    <img src="khidki_artifacts/PORTAL%204.png" alt="Portal">
                     <div class="overlay">
-                        <h4>Color Theory</h4>
-                        <span>Digital Art</span>
+                        <h4>Portal</h4>
+                        <span>Artwork 4</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="52.jpg" alt="Night">
+                    <img src="khidki_artifacts/Kaarigari%205.png" alt="Kaarigari">
                     <div class="overlay">
-                        <h4>Starlit Peaks</h4>
-                        <span>Astrophotography</span>
+                        <h4>Kaarigari</h4>
+                        <span>Artwork 5</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="khidki_artifacts/Mannat%206.png" alt="Mannat">
+                    <div class="overlay">
+                        <h4>Mannat</h4>
+                        <span>Artwork 6</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="khidki_artifacts/Parchchai%207.png" alt="Parchchai">
+                    <div class="overlay">
+                        <h4>Parchchai</h4>
+                        <span>Artwork 7</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="khidki_artifacts/Bachpan%208.png" alt="Bachpan">
+                    <div class="overlay">
+                        <h4>Bachpan</h4>
+                        <span>Artwork 8</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="khidki_artifacts/Jharna%209.png" alt="Jharna">
+                    <div class="overlay">
+                        <h4>Jharna</h4>
+                        <span>Artwork 9</span>
                     </div>
                 </div>
             </div>
