--- a/painting.html
+++ b/painting.html
@@ -528,84 +528,84 @@
         const paintings = [
             {
                 id: 1,
-                image: "1.jpg",
-                title: "Spectrum of Silence",
-                medium: "Oil on Canvas, 48×72\"",
-                description: "This piece explores the quiet moments between breaths, where colors speak louder than words. The interplay of warm and cool tones represents the duality of peace and passion that exists within stillness. Created during a period of deep introspection, each brushstroke carries the weight of unspoken emotions.",
-                audio: null, // Add audio file path like "audio/painting1.mp3"
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Kshitij%201.png",
+                title: "Kshitij",
+                medium: "Charcoal & Pastel, 16×20\"",
+                description: "This painting explores why we look at horizons—not out of loss, but out of imagination. Standing at a chosen peak of our journey, we allow ourselves to feel proud, pause, and envision what else we could become. The horizon becomes a reminder that the story is still unfolding.",
+                audio: "khidki_artifacts/Kshitij%201.mp3",
+                audioDuration: "1:23"
             },
             {
                 id: 2,
-                image: "4.jpg",
-                title: "Twilight Mountains",
-                medium: "Oil on Canvas, 36×48\"",
-                description: "Inspired by the fleeting moments when day surrenders to night, this landscape captures the mystical quality of mountains at dusk. The purple and gold hues dancing across the peaks represent the eternal dance between light and shadow, reminding us of nature's daily miracle.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Talaash%202.png",
+                title: "Talaash",
+                medium: "Mixed Media",
+                description: "This work reflects the idea that some truths are not found by searching harder but by allowing life to move through us. By floating instead of fighting, we discover that what we seek outside often already exists within.",
+                audio: "khidki_artifacts/Talaash%202.mp3",
+                audioDuration: "1:45"
             },
             {
                 id: 3,
-                image: "8.jpg",
-                title: "Kaarigari",
-                medium: "Watercolor on Paper, 18×24\"",
-                description: "This work reminds us that meaning doesn’t always live in grand views but in small, often unnoticed moments. By closing our eyes and slowing down, we learn to feel presence, light, and life through details rather than spectacle",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Ghungroo%203.png",
+                title: "Ghungroo",
+                medium: "Mixed Media",
+                description: "This painting challenges the stereotype that discipline limits freedom. Rooted in classical training, the figure moves effortlessly through fluid space, showing how strong foundations create adaptability—in art, in identity, and in life.",
+                audio: "khidki_artifacts/Ghungroo%203..mp3",
+                audioDuration: "2:10"
             },
             {
                 id: 4,
-                image: "9.jpg",
-                title: "Mannat",
-                medium: "Acrylic on Canvas, 24×36\"",
-                description: "Under one shared sky, distance loses its power. This painting reflects how love, kindness, and remembrance travel effortlessly across time and space—especially during festivals, celebrations, and moments of quiet longing.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/PORTAL%204.png",
+                title: "Portal",
+                medium: "Mixed Media",
+                description: "Born from lockdown isolation, this painting captures how imagination became a way to travel when the world stood still. Art preserves that suspended moment, allowing emotions, longing, and absence to remain alive beyond time.",
+                audio: "khidki_artifacts/The%20Portal%204.mp3",
+                audioDuration: "1:30"
             },
             {
                 id: 5,
-                image: "11.jpg",
-                title: "Kshitij",
-                medium: "Charcoal & Pastel, 16×20\"",
-                description: "This painting explores why we look at horizons—not out of loss, but out of imagination.\n Standing at a chosen peak of our journey, we allow ourselves to feel proud, pause, and envision what else we could become. The horizon becomes a reminder that the story is still unfolding.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Kaarigari%205.png",
+                title: "Kaarigari",
+                medium: "Watercolor on Paper, 18×24\"",
+                description: "This work reminds us that meaning doesn’t always live in grand views but in small, often unnoticed moments. By closing our eyes and slowing down, we learn to feel presence, light, and life through details rather than spectacle.",
+                audio: "khidki_artifacts/Kaarigari%205.mp3",
+                audioDuration: "1:55"
             },
             {
                 id: 6,
-                image: "12.jpg",
-                title: "Parchhai",
-                medium: "Watercolor, 12×16\"",
-                description: "This painting explores the imbalance of moving on. While one person leaves for new beginnings, the one who stays behind remains surrounded by memories embedded in the same space, struggling longer with absence and emotional weight.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Mannat%206.png",
+                title: "Mannat",
+                medium: "Acrylic on Canvas, 24×36\"",
+                description: "Under one shared sky, distance loses its power. This painting reflects how love, kindness, and remembrance travel effortlessly across time and space—especially during festivals, celebrations, and moments of quiet longing.",
+                audio: "khidki_artifacts/Mannat%206.mp3",
+                audioDuration: "2:05"
             },
             {
                 id: 7,
-                image: "16.jpg",
-                title: "Echoes of Joy",
-                medium: "Acrylic, 30×40\"",
-                description: "Pure, unfiltered happiness translated onto canvas. This piece was created in a single session of creative flow, capturing the energy of a moment when everything feels possible. The dynamic composition and vibrant palette invite viewers to remember their own moments of unbridled joy.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Parchchai%207.png",
+                title: "Parchchai",
+                medium: "Watercolor, 12×16\"",
+                description: "This painting explores the imbalance of moving on. While one person leaves for new beginnings, the one who stays behind remains surrounded by memories embedded in the same space, struggling longer with absence and emotional weight.",
+                audio: "khidki_artifacts/Parchchai%207..mp3",
+                audioDuration: "1:40"
             },
             {
                 id: 8,
-                image: "28.jpg",
-                title: "Urban Rhythms",
-                medium: "Mixed Media, 24×36\"",
-                description: "The city has its own heartbeat, its own melody. This mixed media piece layers paint, paper, and found materials to create a textured portrait of urban life. Look closely and you'll find fragments of maps, tickets, and memories woven into the composition.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Bachpan%208.png",
+                title: "Bachpan",
+                medium: "Mixed Media",
+                description: "Childhood was not perfect—it was protected. This painting reflects how innocence existed because we were distant from harsh truths. Adulthood did not destroy childhood; it prepared us to face a world we once weren’t ready for.",
+                audio: "khidki_artifacts/Bachpan%208.mp3",
+                audioDuration: "1:15"
             },
             {
                 id: 9,
-                image: "52.jpg",
-                title: "Starlit Peaks",
-                medium: "Oil on Canvas, 40×60\"",
-                description: "Under a canopy of stars, mountains become cathedrals of silence. This nocturnal landscape was painted from memory of a night spent in the highlands, where the Milky Way seemed close enough to touch. The luminous quality of the paint captures that magical, otherworldly light.",
-                audio: null,
-                audioDuration: "Coming soon"
+                image: "khidki_artifacts/Jharna%209.png",
+                title: "Jharna",
+                medium: "Mixed Media",
+                description: "When we stand too close to a problem, it becomes overwhelming. This painting reminds us that by stepping back—by changing perspective—we can rediscover the calm, support, and goodness that never disappeared, only waited to be noticed.",
+                audio: "khidki_artifacts/Jharna%209.mp3",
+                audioDuration: "1:50"
             }
         ];
 
